@@ -21,6 +21,7 @@ Bug Fixes::
   * Fix crash when resolving next value in sequence for counter with non-numeric value (#3940)
   * Rollback change for #3470, which added logic to remove leading and trailing empty lines in an AsciiDoc include file; instead skip empty lines before processing document header (#3997)
   * Update default stylesheet to remove dash in front of cite on nested quote block (#3847)
+  * Don't mangle formatting macros when uppercasing section titles in man page output (#3892)
   * Don't escape hyphen in manname in man page output
   * Remove extra .sp before content of verse block in man page output
   * Fix layout of footnotes in man page output (#3989)
